[package]
name = "monstrous"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_ecs_tilemap = "0.8.0"
rand = "0.8.5"
ron = "0.8.0"
serde = { version = "1.0.143", features = ["derive"] }
